# AI-Threat-Modelling-Engine

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  engine.py  llm.py  main.py  models.py  parsers.py  report.py
examples/: architecture.mmd
tests/: test_engine.py
