[project]
name = "ai-threat-modelling-engine"
version = "0.1.0"
description = "Evidence-backed threat modelling from architecture and infrastructure-as-code"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1", "uvicorn[standard]>=0.30,<1", "python-multipart>=0.0.18,<1",
  "pydantic-settings>=2.6,<3", "PyYAML>=6.0,<7", "defusedxml>=0.7,<1",
  "openai>=1.55,<2", "reportlab>=4.2,<5"
]

[project.optional-dependencies]
dev = ["pytest>=8.3,<9", "httpx>=0.27,<1", "ruff>=0.8,<1"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

